# api/handlers/v1/series_get_list_paginated.go
@@ -1,0 +1,111 @@
+package v1Handler
+
+import (
+	"errors"
+	"fmt"
+	"net/http"
+
+	v1Binding "fourleaves.studio/manga-scraper/api/bindings/v1"
+	"fourleaves.studio/manga-scraper/api/middlewares"
+	v1Response "fourleaves.studio/manga-scraper/api/renderings/v1"
+	db "fourleaves.studio/manga-scraper/internal/database/prisma"
+	"github.com/getsentry/sentry-go"
+	"github.com/labstack/echo/v4"
+)
+
+// @Summary		Get paginated series list
+// @Description	Get paginated series list
+// @Tags			series
+// @Produce		json
+// @Param			provider_slug	path		string	true	"Provider slug" example(asura)
+// @Param			page	query		string	true	"Page" example(10)
+// @Param			size	query		string	true	"Size" example(100)
+// @Success		200	{object}	v1Response.Response
+// @Failure		404	{object}	v1Response.Response
+// @Failure		500	{object}	v1Response.Response
+// @Router			/api/v1/series/{provider_slug} [get]
+func (h *Handler) GetSeriesListPaginated(c echo.Context) error {
+	span := sentry.StartSpan(c.Request().Context(), "v1.GetSeriesListAll")
+	span.Name = "v1.GetSeriesListAll"
+	defer span.Finish()
+
+	var req v1Binding.PaginatedRequest
+	err := c.Bind(&req)
+	if err != nil {
+		span.Status = sentry.SpanStatusInvalidArgument
+		return c.JSON(http.StatusBadRequest, v1Response.Response{
+			Error:   true,
+			Message: "Bad Request",
+			Detail:  err.Error(),
+		})
+	}
+
+	err = c.Validate(&req)
+	if err != nil {
+		span.Status = sentry.SpanStatusInvalidArgument
+		return c.JSON(http.StatusBadRequest, v1Response.Response{
+			Error:   true,
+			Message: "Bad Request",
+			Detail:  middlewares.FormatValidationError(err),
+		})
+	}
+
+	providerSlug := c.Param("provider_slug")
+
+	cache, err := h.redis.GetSeriesListV1(c.Request().Context(), providerSlug, req.Page, req.Size)
+	if err == nil {
+		span.Status = sentry.SpanStatusOK
+		return c.JSON(http.StatusOK, v1Response.Response{
+			Error:   false,
+			Message: "OK",
+			Data:    cache,
+		})
+	}
+
+	provider, err := h.prisma.FindProviderUniqueV1(c.Request().Context(), providerSlug)
+	if errors.Is(err, db.ErrNotFound) {
+		span.Status = sentry.SpanStatusNotFound
+		return c.JSON(http.StatusNotFound, v1Response.Response{
+			Error:   true,
+			Message: "Not found",
+			Detail:  fmt.Sprintf("Provider with slug '%s' not found", providerSlug),
+		})
+	} else if err != nil {
+		middlewares.SentryHandleInternalError(c, span, err, "prisma.FindProviderUniqueV1")
+		return c.JSON(http.StatusInternalServerError, v1Response.Response{
+			Error:   true,
+			Message: "Internal Server Error",
+		})
+	}
+
+	series, err := h.prisma.FindSeriesManyPaginatedV1(c.Request().Context(), providerSlug, req)
+	if err != nil {
+		middlewares.SentryHandleInternalError(c, span, err, "prisma.FindSeriesManyPaginatedV1")
+		return c.JSON(http.StatusInternalServerError, v1Response.Response{
+			Error:   true,
+			Message: "Internal Server Error",
+		})
+	}
+
+	if len(series) == 0 {
+		span.Status = sentry.SpanStatusNotFound
+		return c.JSON(http.StatusNotFound, v1Response.Response{
+			Error:   true,
+			Message: "Not found",
+		})
+	}
+
+	result := v1Response.NewGetSeriesListData(provider, series)
+
+	err = h.redis.SetSeriesListV1(c.Request().Context(), providerSlug, req.Page, req.Size, result)
+	if err != nil {
+		middlewares.SentryHandleInternalError(c, span, err, "redis.SetSeriesListAllV1")
+	}
+
+	span.Status = sentry.SpanStatusOK
+	return c.JSON(http.StatusOK, v1Response.Response{
+		Error:   false,
+		Message: "OK",
+		Data:    result,
+	})
+}
